RESOLVED FIXED296318
Web process still intermittently crashes doing incremental PDF work under PDFPluginBase::dataSpanForRange()
https://bugs.webkit.org/show_bug.cgi?id=296318
Summary Web process still intermittently crashes doing incremental PDF work under PDF...
Abrar Rahman Protyasha
Reported 2025-07-22 01:08:50 PDT
i.e. even after 295775@main
Attachments
Abrar Rahman Protyasha
Comment 1 2025-07-22 01:09:01 PDT
Abrar Rahman Protyasha
Comment 2 2025-07-22 02:25:46 PDT
EWS
Comment 3 2025-07-22 17:21:47 PDT
Committed 297764@main (8653dfc68de6): <https://commits.webkit.org/297764@main> Reviewed commits have been landed. Closing PR #48363 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.