Web process still crashes under PDFPluginBase::dataSpanForRange() after 295775@main https://bugs.webkit.org/show_bug.cgi?id=296318 rdar://155917281

Reviewed by Wenson Hsieh.

The web content process is still occasionally crashing under
PDFPluginBase::dataSpanForRange(). While the root cause is yet to be
determined, code inspection suggests there is possibility for the
m_streamedBytes count and the m_data buffer length to be out of sync, in
which case comparisons against (source + offset) for range validity
could be different when referencing either.

This patch makes dataSpanForRange() more robust against crashes by
addressing this specific scenario. Instead of blindly returning true if
source + offset < m_streamedBytes, we instead return the source + offset
comparison against the data buffer size. This way, the latter is treated
as the source of ground truth.

* Source/WebKit/WebProcess/Plugins/PDF/PDFIncrementalLoader.mm:
(WebKit::PDFIncrementalLoader::PDFIncrementalLoader):
(WebKit::PDFIncrementalLoader::threadEntry):
    Some drive-by code hygiene fixes.
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::dataSpanForRange const):

Canonical link: https://commits.webkit.org/297764@main