Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm
@@ -392,11 +392,13 @@ void PDFPluginBase::dataSpanForRange(uint64_t sourcePosition, size_t count, Chec
         if (!m_data)
             return false;
 
-        if (haveStreamedDataForRange(sourcePosition, count))
-            return true;
-
         uint64_t dataLength = CFDataGetLength(m_data.get());
-        if (!isSumSmallerThanOrEqual(sourcePosition, static_cast<uint64_t>(count), dataLength))
+        bool rangeExtentIsSmallerThanBufferSize = isSumSmallerThanOrEqual(sourcePosition, static_cast<uint64_t>(count), dataLength);
+
+        if (haveStreamedDataForRange(sourcePosition, count))
+            return rangeExtentIsSmallerThanBufferSize;
+
+        if (!rangeExtentIsSmallerThanBufferSize)
             return false;
 
         if (checkValidRanges == CheckValidRanges::No)
